add authorization to swagger-ui
