# models/user.model.js
@@ -1,0 +1,18 @@
+const mongoose = require('mongoose')
+
+const UserSchema = mongoose.Schema({
+    username:{
+        type: String,
+        require: true
+    },
+    email:{
+        type: String,
+        require: true
+    },
+    password:{
+        type:"String",
+        require: true
+    }
+})
+const User = mongoose.model('user', UserSchema)
+module.exports = User;
