# routes/products.routes.js
@@ -1,10 +1,19 @@
 const controller = require('./../controllers/products.controller')
+const authJwt = require('./../utils/db/authJwt')
 module.exports = (app) =>{
-    app.get('/products', controller.getProduct);
+    app.use((req, res, next) => {
+        res.header(
+          "Access-Control-Allow-Headers",
+          "x-access-token, Origin, Content-Type, Accept"
+        );
+        next(); 
+      });
+    app.get('/products', [authJwt.verifyToken],controller.getProduct);
     app.get('/products/:id', controller.getProductById);
     app.post('/products', controller.createProduct);
     app.put('/products/:id', controller.updateProduct);
     app.delete('/products/:id',controller.deleteProduct)
 }
+
 
 
