# routes/user.routes.js
@@ -1,0 +1,5 @@
+const controller = require('./../controllers/user.controller');
+module.exports = (app)=>{
+    app.post('/user', controller.createUser)
+    app.post('/user/signin', controller.createSignIn)
+}
